Добавил поля даты и времени, продолжительности, методы и тесты, связанные с ними. Внедрил использование Stream API. Создал логику хранения всех задач по приоритетам, а так же вызов такого списка за O(n). Создал проверку на пересечения по времени начала и окончания задач с помощью Stream API.