@@ -7,6 +7,9 @@ import tracker.model.Epic;
 import tracker.model.Status;
 import tracker.model.Task;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
+
 class InMemoryHistoryManagerTest {
     private HistoryManager historyManager;
 
@@ -17,7 +20,8 @@ class InMemoryHistoryManagerTest {
 
     @Test
     public void add_shouldAddToHistory() {
-        Task task = new Task("Name", "Description");
+        Task task = new Task("Name", "Description",
+                LocalDateTime.of(2025, 8, 29, 14, 0), Duration.ofMinutes(60));
         task.setId(1203);
         historyManager.add(task);
 
@@ -27,7 +31,8 @@ class InMemoryHistoryManagerTest {
     @Test
     public void add_addTheTaskToTheEndOfTheList() {
         InMemoryHistoryManager history = new InMemoryHistoryManager();
-        Task task = new Task("Name 1", "Task");
+        Task task = new Task("Name 1", "Task",
+                LocalDateTime.of(1958, 8, 29, 14, 0), Duration.ofMinutes(60));
         task.setId(427);
         history.add(task);
 
@@ -40,7 +45,8 @@ class InMemoryHistoryManagerTest {
 
     @Test
     public void remove_mustDeleteTheTaskFromTheHistory() {
-        Task task = new Task("Name 1", "Task");
+        Task task = new Task("Name 1", "Task",
+                LocalDateTime.of(1958, 8, 29, 14, 0), Duration.ofMinutes(60));
         task.setId(384);
         Epic epic = new Epic("Name 2", "Epic");
         epic.setId(618);
@@ -50,12 +56,13 @@ class InMemoryHistoryManagerTest {
 
         historyManager.remove(task.getId());
         Assertions.assertEquals(1, historyManager.getHistory().size());
-        Assertions.assertEquals(epic, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic, historyManager.getHistory().getFirst());
     }
 
     @Test
     public void add_mustSavePreviousData_changingDataAfterSavingItInTheHistory() {
-        Task task = new Task("Name", "Description");
+        Task task = new Task("Name", "Description",
+                LocalDateTime.of(1958, 8, 29, 14, 0), Duration.ofMinutes(60));
         historyManager.add(task);
         task.setStatus(Status.DONE);
         int index = historyManager.getHistory().indexOf(task);
